# apywire

./: .editorconfig  .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  REUSE.toml  mkdocs.yml  pyproject.toml  setup.py  versions.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/api-reference/: index.html
0.1.0/development/: index.html
0.1.0/examples/: index.html
0.1.0/getting-started/: index.html
0.1.0/search/: search_index.json
0.1.0/user-guide/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api-reference/: index.html
0.2.0/development/: index.html
0.2.0/examples/: index.html
0.2.0/getting-started/: index.html
0.2.0/search/: search_index.json
0.2.0/user-guide/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/api-reference/: index.html
1.0.0/development/: index.html
1.0.0/examples/: index.html
1.0.0/getting-started/: index.html
1.0.0/user-guide/: index.html
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/api-reference/: index.html
1.0.1/development/: index.html
1.0.1/examples/: index.html
1.0.1/getting-started/: index.html
1.0.1/search/: search_index.json
1.0.1/user-guide/: index.html
1.0.2/: 404.html  index.html  sitemap.xml
1.0.2/api-reference/: index.html
1.0.2/development/: index.html
1.0.2/examples/: index.html
1.0.2/getting-started/: index.html
1.0.2/user-guide/: index.html
1.0.3/: 404.html  index.html  sitemap.xml
1.0.3/api-reference/: index.html
1.0.3/development/: index.html
1.0.3/examples/: index.html
1.0.3/getting-started/: index.html
1.0.3/user-guide/: index.html
1.0.4/: 404.html  index.html  sitemap.xml
1.0.4/api-reference/: index.html
1.0.4/development/: index.html
1.0.4/examples/: index.html
1.0.4/getting-started/: index.html
1.0.4/search/: search_index.json
1.0.4/user-guide/: index.html
1.0.5/: 404.html  index.html  sitemap.xml
1.0.5/api-reference/: index.html
1.0.5/development/: index.html
1.0.5/examples/: index.html
1.0.5/getting-started/: index.html
1.0.5/user-guide/: index.html
1.0.6/: 404.html  index.html  sitemap.xml
1.0.6/api-reference/: index.html
1.0.6/development/: index.html
1.0.6/examples/: index.html
1.0.6/getting-started/: index.html
1.0.6/user-guide/: index.html
LICENSES/: ISC.txt
apywire/: __init__.py  __main__.py  compiler.py  constants.py  exceptions.py  formats.py  generator.py  partial.py  runtime.py  thread_safety.py  threads.py  wiring.py
dev-main/: 404.html  index.html  objects.inv  sitemap.xml
dev-main/api-reference/: index.html
dev-main/development/: index.html
dev-main/examples/: index.html
dev-main/getting-started/: index.html
dev-main/search/: search_index.json
dev-main/user-guide/: index.html
docs/: api-reference.md  development.md  examples.md  getting-started.md  index.md
docs/user-guide/: advanced.md  async-support.md  basic-usage.md  circular-dependencies.md  cli.md  compilation.md  configuration-files.md  generator.md  index.md  thread-safety.md
examples/basic_app/: README.md
tests/: __init__.py  test_cli.py  test_compile_aio.py  test_compile_partial.py  test_constant_placeholders.py  test_dataclasses.py  test_edge_cases.py  test_exceptions.py  test_factory_methods.py  test_formats.py  test_generator.py  test_graph_detection.py  test_internals.py  test_partial_helper.py  test_simple.py  test_single.py  test_stdlib_compat.py  test_threading.py
(+92 files in other folders)
